# django-countries

./: .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  AGENTS.md  CHANGES.md  CHANGES.rst  CLAUDE.md  DEVELOPING.rst  MANIFEST.in  README  README.md  README.rst  features_introduces.md  index.html  justfile  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  tests.yml
.tx/: config
advanced/customization/: index.html
advanced/dynamic-ordering/: index.html
advanced/multiple/: index.html
changelog/: index.html
changes/: +20250104-1.misc.md  +20250104-2.misc.md  +20250104-3.misc.md  +20250104-4.doc.md  +20250104-5.doc.md  +20250104-6.misc.md  +20251104-common-names.feature.md  +20251104-country-data.bugfix.md  +20251104-iso-docs.doc.md  +20251104-py37.removal.md  +20251104.misc.md  +20251105-old-names-translation.misc.md  +20251111-tx-pull-timestamps.bugfix.md  +20251124-countries-context.feature.md  +20251124-deploy-script.misc.md  +20260215-locale-sorted-helper.feature.md  +20260610-dj60-py314.feature.md  280.bugfix.md  307.feature.md  311.bugfix.md  407.bugfix.md  414.feature.md  416.feature.md  418.feature.md  432.bugfix.md  441.bugfix.md  445.bugfix.md  449.feature.md  453.feature.2.md  453.feature.md  454.bugfix.md  455.bugfix.md  463.bugfix.md  466.bugfix.md  469.bugfix.md  473.doc.md  474.bugfix.md  480.bugfix.md  481.feature.md  482.bugfix.md  (+4 more)
contributing/: index.html
django_countries/: __init__.py  base.py  conf.py  countries.py  data.py  django_filters.py  fields.py  fields.pyi  filters.py  ioc_data.py  makesprite.py  region_data.py  release.py  serializer_fields.py  serializers.py  settings.py  test_settings.py  utils.py  widgets.py
django_countries/data/: country_metadata.yaml
django_countries/generators/: generate_langs.py
django_countries/graphql/: types.py
django_countries/locale/af/LC_MESSAGES/: django.mo  django.po
django_countries/locale/ar/LC_MESSAGES/: django.mo  django.po
django_countries/locale/bg/LC_MESSAGES/: django.mo  django.po
django_countries/locale/ca/LC_MESSAGES/: django.mo  django.po
django_countries/locale/cs/LC_MESSAGES/: django.mo  django.po
django_countries/locale/da/LC_MESSAGES/: django.mo  django.po
django_countries/locale/de/LC_MESSAGES/: django.mo  django.po
django_countries/locale/el/LC_MESSAGES/: django.mo  django.po
django_countries/locale/en/LC_MESSAGES/: django.mo  django.po
django_countries/locale/en_Test/LC_MESSAGES/: django.po
django_countries/locale/eo/LC_MESSAGES/: django.mo  django.po
django_countries/locale/es/LC_MESSAGES/: django.mo  django.po
django_countries/locale/es_DO/LC_MESSAGES/: django.mo  django.po
django_countries/locale/et/LC_MESSAGES/: django.mo  django.po
django_countries/locale/eu/LC_MESSAGES/: django.mo  django.po
django_countries/locale/eu_ES/LC_MESSAGES/: django.mo  django.po
django_countries/locale/fa/LC_MESSAGES/: django.mo  django.po
django_countries/locale/fi/LC_MESSAGES/: django.mo  django.po
django_countries/locale/fr/LC_MESSAGES/: django.mo  django.po
django_countries/locale/he/LC_MESSAGES/: django.mo  django.po
django_countries/locale/he_IL/LC_MESSAGES/: django.mo  django.po
django_countries/locale/hr/LC_MESSAGES/: django.mo  django.po
django_countries/locale/hu/LC_MESSAGES/: django.mo  django.po
django_countries/locale/hy/LC_MESSAGES/: django.mo  django.po
django_countries/locale/it/LC_MESSAGES/: django.mo  django.po
django_countries/locale/ja/LC_MESSAGES/: django.mo  django.po
django_countries/locale/ka_GE/LC_MESSAGES/: django.mo  django.po
django_countries/locale/ko_KR/LC_MESSAGES/: django.mo  django.po
django_countries/locale/lt/LC_MESSAGES/: django.mo  django.po
django_countries/locale/lv/LC_MESSAGES/: django.mo  django.po
django_countries/locale/mn/LC_MESSAGES/: django.mo  django.po
django_countries/locale/nb/LC_MESSAGES/: django.mo  django.po
django_countries/locale/nl/LC_MESSAGES/: django.mo  django.po
django_countries/locale/pl/LC_MESSAGES/: django.mo  django.po
django_countries/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
django_countries/locale/pt_PT/LC_MESSAGES/: django.mo  django.po
django_countries/locale/ro/LC_MESSAGES/: django.mo  django.po
django_countries/locale/ru/LC_MESSAGES/: django.mo  django.po
django_countries/locale/sk/LC_MESSAGES/: django.mo  django.po
django_countries/locale/sl/LC_MESSAGES/: django.mo  django.po
django_countries/locale/sr/LC_MESSAGES/: django.mo  django.po
django_countries/locale/sr@latin/LC_MESSAGES/: django.po
django_countries/locale/sr_BA@latin/LC_MESSAGES/: django.mo  (+1 more)
django_countries/static/flags/: sprite-hq.css  sprite.css
django_countries/templatetags/: countries.py  countries_tags.py
django_countries/tests/: __init__.py  apps.py  custom_countries.py  fields.py  forms.py  models.py  settings.py  settings_lts.py  settings_noi18n.py  test_admin_display.py  test_admin_filters.py  test_countries.py  test_country_metadata.py  test_drf.py  test_dynamic_first.py  test_fields.py  test_null_support.py  test_serializer_metadata.py  test_settings.py  test_tags.py  test_widgets.py
django_countries/tests/countries_test/: models.py
django_countries/tests/graphql/: schema.py  test_country_type.py  test_model.py
django_countries/utils/: metadata.py  tests.py
docs/: changelog.md  contributing.md  index.md  installation.md  iso3166-formatting.md  quickstart.md
docs/advanced/: customization.md  dynamic-ordering.md  multiple.md
docs/integrations/: django_filters.md  drf.md  graphql.md
docs/stylesheets/: extra.css
docs/usage/: field.md  forms.md  settings.md  templates.md
installation/: index.html
integrations/django_filters/: index.html
integrations/drf/: index.html
integrations/graphql/: index.html
iso3166-formatting/: index.html
locale/en/LC_MESSAGES/: django.po
quickstart/: index.html
scripts/: deploy.py  generate_metadata.py  release.py  release.sh
search/: search_index.json
usage/field/: index.html
usage/forms/: index.html
usage/settings/: index.html
usage/templates/: index.html
(+21 files in other folders)
