[metadata]
name = django-countries
version = 5.6.dev0
description = Provides a country field for Django models.
long_description = file: README.rst, CHANGES.rst
author = Chris Beaven
author_email = smileychris@gmail.com
url = https://github.com/SmileyChris/django-countries/
keywords = django, countries, flags
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.extras_require]
maintainer =
    transifex-client
    zest.releaser[recommended]
    django
dev =
    tox
    django
    mock; python_version<"3"
    pytest
    pytest-django
    djangorestframework
test =
    mock; python_version<"3"
    pytest
    pytest-django
    pytest-cov

[bdist_wheel]
# Works in both Python 2 and Python 3
universal = 1

[flake8]
exclude =
    .tox,
    .git,
    __pycache__,
    build,
    dist
# black-compatible settings
max-line-length = 88
ignore = E203,W503

[coverage:run]
source = django_countries
omit =
    django_countries/release.py
    django_countries/makesprite.py

[zest.releaser]
less-zeros = yes
version-levels = 2
tag-format = v{version}
tag-message = Version {version}
tag-signing = yes
date-format = %%-d %%B %%Y
prereleaser.middle =
    django_countries.release.translations

[check-manifest]
ignore-bad-ideas = *.mo

[tool:pytest]
DJANGO_SETTINGS_MODULE = django_countries.tests.settings
filterwarnings =
    module
    ignore:force_str|smart_text|django.utils.translation.ugettext_lazy:PendingDeprecationWarning
