[metadata]
name = django-countries
version = 7.2
description = Provides a country field for Django models.
long_description = file: README.rst, CHANGES.rst
author = Chris Beaven
author_email = smileychris@gmail.com
url = https://github.com/SmileyChris/django-countries/
keywords = django, countries, flags
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.extras_require]
maintainer =
    transifex-client
    zest.releaser[recommended]
    django
dev =
    tox
    black
    django
    pytest
    pytest-django
    djangorestframework
    graphene-django
test =
    pytest
    pytest-django
    pytest-cov
    graphene-django
pyuca =
    pyuca

[bdist_wheel]
# No longer universal (Python 3 only) but leaving this section in here will
# trigger zest to build a wheel.
universal = 0

[flake8]
exclude =
    .tox,
    .git,
    __pycache__,
    build,
    dist
# black-compatible settings
max-line-length = 88
ignore = E203,W503

[coverage:run]
source = django_countries
omit =
    django_countries/release.py
    django_countries/makesprite.py

[zest.releaser]
less-zeros = yes
version-levels = 2
tag-format = v{version}
tag-message = Version {version}
tag-signing = yes
date-format = %%-d %%B %%Y
prereleaser.middle =
    django_countries.release.translations

[check-manifest]
ignore-bad-ideas = *.mo

[tool:pytest]
DJANGO_SETTINGS_MODULE = django_countries.tests.settings
filterwarnings =
    ignore::DeprecationWarning:graphene

[mypy]
plugins = mypy_django_plugin.main

[mypy.plugins.django-stubs]
django_settings_module = django_countries.tests.settings
